# custom_interfaces

./: .gitignore  CMakeLists.txt  package.xml
action/: GetCurrentPose.action  GetJointAngles.action  MoveitPose.action  MoveitRelative.action  PlanComplexCartesianSteps.action  Prompt.action  SetJointAngles.action
msg/: CLIPClassification.msg  GraspDetections.msg  GraspPose.msg  SAMDetection.msg  SAMDetections.msg  SceneObject.msg  SceneRelation.msg  SceneUnderstanding.msg
srv/: ClassifyAll.srv  ClassifyBBox.srv  ClassifyBBoxFiltered.srv  DetectGraspBBox.srv  DetectGrasps.srv  DetectObjects.srv  FindObject.srv  FindObjectGrasp.srv  FindObjectReal.srv  GetCurrentPose.srv  GetJointAngles.srv  GetSetBool.srv  GetTranscript.srv  PixelToReal.srv  UnderstandScene.srv
